Minor Update Swagger
